--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
                 <configuration>
                     <suiteXmlFiles>
                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                        <suiteXmlFile>testngAndroidAppium.xml</suiteXmlFile>
-                        <suiteXmlFile>testngApi.xml</suiteXmlFile>
+                        <!--<suiteXmlFile>testngAndroidAppium.xml</suiteXmlFile>
+                        <suiteXmlFile>testngApi.xml</suiteXmlFile>-->
                     </suiteXmlFiles>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
