--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
                 <version>3.2.2</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <!--<suiteXmlFile>testng.xml</suiteXmlFile>
-                         <suiteXmlFile>testngAndroidAppium.xml</suiteXmlFile>-->
-                         <suiteXmlFile>testngApi.xml</suiteXmlFile>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                         <!--<suiteXmlFile>testngAndroidAppium.xml</suiteXmlFile>-->
+                         <!--<suiteXmlFile>testngApi.xml</suiteXmlFile>-->
                     </suiteXmlFiles>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
