--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
                 <version>3.2.2</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>testngWebSelect.xml</suiteXmlFile>
                          <!--<suiteXmlFile>testngAndroidAppium.xml</suiteXmlFile>-->
                          <!--<suiteXmlFile>testngApi.xml</suiteXmlFile>-->
                     </suiteXmlFiles>
